--- a/build_debug/Makefile
+++ b/build_debug/Makefile
@@ -48,10 +48,10 @@ RM = /usr/bin/cmake -E remove -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = /home/hdb/proj/DEEP-GSTREAMER/glib_base/glib_sample
+CMAKE_SOURCE_DIR = /home/hdb/proj/DEEP-GSTREAMER/glib_base
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = /home/hdb/proj/DEEP-GSTREAMER/glib_base/glib_sample/build_debug
+CMAKE_BINARY_DIR = /home/hdb/proj/DEEP-GSTREAMER/glib_base/build_debug
 
 #=============================================================================
 # Targets provided globally by CMake.
@@ -80,9 +80,9 @@ edit_cache/fast: edit_cache
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/hdb/proj/DEEP-GSTREAMER/glib_base/glib_sample/build_debug/CMakeFiles /home/hdb/proj/DEEP-GSTREAMER/glib_base/glib_sample/build_debug/CMakeFiles/progress.marks
+	$(CMAKE_COMMAND) -E cmake_progress_start /home/hdb/proj/DEEP-GSTREAMER/glib_base/build_debug/CMakeFiles /home/hdb/proj/DEEP-GSTREAMER/glib_base/build_debug/CMakeFiles/progress.marks
 	$(MAKE) -f CMakeFiles/Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/hdb/proj/DEEP-GSTREAMER/glib_base/glib_sample/build_debug/CMakeFiles 0
+	$(CMAKE_COMMAND) -E cmake_progress_start /home/hdb/proj/DEEP-GSTREAMER/glib_base/build_debug/CMakeFiles 0
 .PHONY : all
 
 # The main clean target
@@ -122,6 +122,33 @@ glib: cmake_check_build_system
 glib/fast:
 	$(MAKE) -f CMakeFiles/glib.dir/build.make CMakeFiles/glib.dir/build
 .PHONY : glib/fast
+
+src/glib_byte_array.o: src/glib_byte_array.c.o
+
+.PHONY : src/glib_byte_array.o
+
+# target to build an object file
+src/glib_byte_array.c.o:
+	$(MAKE) -f CMakeFiles/glib.dir/build.make CMakeFiles/glib.dir/src/glib_byte_array.c.o
+.PHONY : src/glib_byte_array.c.o
+
+src/glib_byte_array.i: src/glib_byte_array.c.i
+
+.PHONY : src/glib_byte_array.i
+
+# target to preprocess a source file
+src/glib_byte_array.c.i:
+	$(MAKE) -f CMakeFiles/glib.dir/build.make CMakeFiles/glib.dir/src/glib_byte_array.c.i
+.PHONY : src/glib_byte_array.c.i
+
+src/glib_byte_array.s: src/glib_byte_array.c.s
+
+.PHONY : src/glib_byte_array.s
+
+# target to generate assembly for a file
+src/glib_byte_array.c.s:
+	$(MAKE) -f CMakeFiles/glib.dir/build.make CMakeFiles/glib.dir/src/glib_byte_array.c.s
+.PHONY : src/glib_byte_array.c.s
 
 src/glib_hook.o: src/glib_hook.c.o
 
@@ -348,6 +375,9 @@ help:
 	@echo "... rebuild_cache"
 	@echo "... glib"
 	@echo "... edit_cache"
+	@echo "... src/glib_byte_array.o"
+	@echo "... src/glib_byte_array.i"
+	@echo "... src/glib_byte_array.s"
 	@echo "... src/glib_hook.o"
 	@echo "... src/glib_hook.i"
 	@echo "... src/glib_hook.s"
