--- a/build_debug/Makefile
+++ b/build_debug/Makefile
@@ -111,6 +111,19 @@ depend:
 .PHONY : depend
 
 #=============================================================================
+# Target rules for targets named glib_thread_pools
+
+# Build rule for target.
+glib_thread_pools: cmake_check_build_system
+	$(MAKE) -f CMakeFiles/Makefile2 glib_thread_pools
+.PHONY : glib_thread_pools
+
+# fast build rule for target.
+glib_thread_pools/fast:
+	$(MAKE) -f CMakeFiles/glib_thread_pools.dir/build.make CMakeFiles/glib_thread_pools.dir/build
+.PHONY : glib_thread_pools/fast
+
+#=============================================================================
 # Target rules for targets named glib_timer
 
 # Build rule for target.
@@ -135,6 +148,19 @@ glib_test_tool: cmake_check_build_system
 glib_test_tool/fast:
 	$(MAKE) -f CMakeFiles/glib_test_tool.dir/build.make CMakeFiles/glib_test_tool.dir/build
 .PHONY : glib_test_tool/fast
+
+#=============================================================================
+# Target rules for targets named glib_thread
+
+# Build rule for target.
+glib_thread: cmake_check_build_system
+	$(MAKE) -f CMakeFiles/Makefile2 glib_thread
+.PHONY : glib_thread
+
+# fast build rule for target.
+glib_thread/fast:
+	$(MAKE) -f CMakeFiles/glib_thread.dir/build.make CMakeFiles/glib_thread.dir/build
+.PHONY : glib_thread/fast
 
 #=============================================================================
 # Target rules for targets named glib_string
@@ -563,6 +589,60 @@ src/glib_test_tool/glib_test_tool.c.s:
 	$(MAKE) -f CMakeFiles/glib_test_tool.dir/build.make CMakeFiles/glib_test_tool.dir/src/glib_test_tool/glib_test_tool.c.s
 .PHONY : src/glib_test_tool/glib_test_tool.c.s
 
+src/glib_thread/glib_thread.o: src/glib_thread/glib_thread.c.o
+
+.PHONY : src/glib_thread/glib_thread.o
+
+# target to build an object file
+src/glib_thread/glib_thread.c.o:
+	$(MAKE) -f CMakeFiles/glib_thread.dir/build.make CMakeFiles/glib_thread.dir/src/glib_thread/glib_thread.c.o
+.PHONY : src/glib_thread/glib_thread.c.o
+
+src/glib_thread/glib_thread.i: src/glib_thread/glib_thread.c.i
+
+.PHONY : src/glib_thread/glib_thread.i
+
+# target to preprocess a source file
+src/glib_thread/glib_thread.c.i:
+	$(MAKE) -f CMakeFiles/glib_thread.dir/build.make CMakeFiles/glib_thread.dir/src/glib_thread/glib_thread.c.i
+.PHONY : src/glib_thread/glib_thread.c.i
+
+src/glib_thread/glib_thread.s: src/glib_thread/glib_thread.c.s
+
+.PHONY : src/glib_thread/glib_thread.s
+
+# target to generate assembly for a file
+src/glib_thread/glib_thread.c.s:
+	$(MAKE) -f CMakeFiles/glib_thread.dir/build.make CMakeFiles/glib_thread.dir/src/glib_thread/glib_thread.c.s
+.PHONY : src/glib_thread/glib_thread.c.s
+
+src/glib_thread_pools/glib_thread_pools.o: src/glib_thread_pools/glib_thread_pools.c.o
+
+.PHONY : src/glib_thread_pools/glib_thread_pools.o
+
+# target to build an object file
+src/glib_thread_pools/glib_thread_pools.c.o:
+	$(MAKE) -f CMakeFiles/glib_thread_pools.dir/build.make CMakeFiles/glib_thread_pools.dir/src/glib_thread_pools/glib_thread_pools.c.o
+.PHONY : src/glib_thread_pools/glib_thread_pools.c.o
+
+src/glib_thread_pools/glib_thread_pools.i: src/glib_thread_pools/glib_thread_pools.c.i
+
+.PHONY : src/glib_thread_pools/glib_thread_pools.i
+
+# target to preprocess a source file
+src/glib_thread_pools/glib_thread_pools.c.i:
+	$(MAKE) -f CMakeFiles/glib_thread_pools.dir/build.make CMakeFiles/glib_thread_pools.dir/src/glib_thread_pools/glib_thread_pools.c.i
+.PHONY : src/glib_thread_pools/glib_thread_pools.c.i
+
+src/glib_thread_pools/glib_thread_pools.s: src/glib_thread_pools/glib_thread_pools.c.s
+
+.PHONY : src/glib_thread_pools/glib_thread_pools.s
+
+# target to generate assembly for a file
+src/glib_thread_pools/glib_thread_pools.c.s:
+	$(MAKE) -f CMakeFiles/glib_thread_pools.dir/build.make CMakeFiles/glib_thread_pools.dir/src/glib_thread_pools/glib_thread_pools.c.s
+.PHONY : src/glib_thread_pools/glib_thread_pools.c.s
+
 src/glib_timer/glib_timer.o: src/glib_timer/glib_timer.c.o
 
 .PHONY : src/glib_timer/glib_timer.o
@@ -596,9 +676,11 @@ help:
 	@echo "... all (the default if no target is provided)"
 	@echo "... clean"
 	@echo "... depend"
+	@echo "... glib_thread_pools"
 	@echo "... glib_timer"
 	@echo "... edit_cache"
 	@echo "... glib_test_tool"
+	@echo "... glib_thread"
 	@echo "... glib_string"
 	@echo "... glib_sigle_list"
 	@echo "... glib_str"
@@ -643,6 +725,12 @@ help:
 	@echo "... src/glib_test_tool/glib_test_tool.o"
 	@echo "... src/glib_test_tool/glib_test_tool.i"
 	@echo "... src/glib_test_tool/glib_test_tool.s"
+	@echo "... src/glib_thread/glib_thread.o"
+	@echo "... src/glib_thread/glib_thread.i"
+	@echo "... src/glib_thread/glib_thread.s"
+	@echo "... src/glib_thread_pools/glib_thread_pools.o"
+	@echo "... src/glib_thread_pools/glib_thread_pools.i"
+	@echo "... src/glib_thread_pools/glib_thread_pools.s"
 	@echo "... src/glib_timer/glib_timer.o"
 	@echo "... src/glib_timer/glib_timer.i"
 	@echo "... src/glib_timer/glib_timer.s"
